--- a/pom.xml
+++ b/pom.xml
@@ -9,23 +9,43 @@
     <version>1.0-SNAPSHOT</version>
 
 
+
+    <name>Exceptions</name>
+
+    <!--<dependencies>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+    </dependencies>-->
+
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
-
-    <build>
+   <!-- <build>
         <sourceDirectory>src</sourceDirectory>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <archive>
-                        <manifestFile>src/hr.java.covidportal/resources/MANIFEST.MF</manifestFile>
-                    </archive>
+                    <release>15</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+-->
+
+
 </project>
